--- a/composer.json
+++ b/composer.json
@@ -4,5 +4,10 @@
     },
     "require": {
         "symfony/console": "^4.0"
+    },
+    "require-dev": {
+        "phpspec/phpspec": "^4.3",
+        "leanphp/phpspec-code-coverage": "^4.2",
+        "behat/behat": "^3.4"
     }
 }
