--- a/phpspec.yml
+++ b/phpspec.yml
@@ -1,11 +1,11 @@
-#extensions:
-#  LeanPHP\PhpSpec\CodeCoverage\CodeCoverageExtension:
-#    format:
-#      - clover
-#    output:
-#      clover: build/coverage.xml
-#    whitelist:
-#      - src
+extensions:
+  LeanPHP\PhpSpec\CodeCoverage\CodeCoverageExtension:
+    format:
+      - clover
+    output:
+      clover: build/coverage.xml
+    whitelist:
+      - src
 suites:
     #...
     default:
